--- a/views/post.ejs
+++ b/views/post.ejs
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="/css/styles.css" />
 
     <!-- Public CSS -->
-    <!-- Reusing Profile Style Sheet -->
-    <link rel="stylesheet" href="/css/profile/style.css" />
+
+    <link rel="stylesheet" href="/css/post/style.css" />
   </head>
   <body>
     <!-- Renders a single Post -->
